// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialization should correctly initialize validator per default 1`] = `
GBFS {
  "auth": {},
  "gotOptions": {
    "headers": {
      "user-agent": "MobilityData GBFS-Validator/1.1.1 (Node 16.0.1)",
    },
  },
  "options": {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization should correctly initialize validator with options 1`] = `
GBFS {
  "auth": {},
  "gotOptions": {
    "headers": {
      "user-agent": "MobilityData GBFS-Validator/1.1.1 (Node 16.0.1)",
    },
  },
  "options": {
    "docked": true,
    "freefloating": true,
    "version": "v2.1",
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization should throw an error without url 1`] = `"Missing URL"`;

exports[`initialization with auth should correctly initialize with \`basic_auth\` 1`] = `
GBFS {
  "auth": {
    "basicAuth": {
      "password": "mypassword",
      "user": "myuser",
    },
    "type": "basic_auth",
  },
  "gotOptions": {
    "headers": {
      "Authorization": "basic bXl1c2VyOm15cGFzc3dvcmQ=",
    },
  },
  "options": {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization with auth should correctly initialize with \`bearer_token\` 1`] = `
GBFS {
  "auth": {
    "bearerToken": {
      "token": "mytoken",
    },
    "type": "bearer_token",
  },
  "gotOptions": {
    "headers": {
      "Authorization": "Bearer mytoken",
    },
  },
  "options": {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization with auth should correctly initialize with multiple \`headers\` 1`] = `
GBFS {
  "auth": {
    "headers": [
      {
        "key": "mykey",
        "value": "myvalue",
      },
      {
        "key": "mysecondkey",
        "value": "mysecondvalue",
      },
      {
        "key": "mythirdkey",
        "value": "mythirdvalue",
      },
    ],
    "type": "headers",
  },
  "gotOptions": {
    "headers": {
      "mykey": "myvalue",
      "mysecondkey": "mysecondvalue",
      "mythirdkey": "mythirdvalue",
      "user-agent": "MobilityData GBFS-Validator/1.1.1 (Node 16.0.1)",
    },
  },
  "options": {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;

exports[`initialization with auth should correctly initialize with one \`headers\` 1`] = `
GBFS {
  "auth": {
    "headers": [
      {
        "key": "mykey",
        "value": "myvalue",
      },
    ],
    "type": "headers",
  },
  "gotOptions": {
    "headers": {
      "mykey": "myvalue",
      "user-agent": "MobilityData GBFS-Validator/1.1.1 (Node 16.0.1)",
    },
  },
  "options": {
    "docked": false,
    "freefloating": false,
    "version": null,
  },
  "url": "http://localhost:8888/gbfs.json",
}
`;
